--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.28.1",
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.7.1",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
-    "prisma": "^5.7.0",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.3.1",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
@@ -35,6 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
