--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.27.3",
+    "@clerk/nextjs": "^4.30.0",
     "@clerk/themes": "^1.7.9",
     "@livekit/components-react": "^1.4.2",
     "@prisma/client": "^5.6.0",
@@ -35,7 +35,7 @@
     "livekit-client": "^1.15.6",
     "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.294.0",
-    "next": "14.0.3",
+    "next": "^14.2.23",
     "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
